--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "@TheBetterStore/tbs-lib-infra-common",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
     "test": "exit 0"
   },
   "repository": {
@@ -15,5 +17,15 @@
   "bugs": {
     "url": "https://github.com/TheBetterStore/tbs-lib-infra-common/issues"
   },
-  "homepage": "https://github.com/TheBetterStore/tbs-lib-infra-common#readme"
+  "homepage": "https://github.com/TheBetterStore/tbs-lib-infra-common#readme",
+  "devDependencies": {
+    "@types/node": "^16.11.6",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "eslint": "^8.1.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-node": "^11.1.0",
+    "typescript": "^4.7.3"
+  }
 }
